Add localization for russian and english language

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -1,1 +1,8 @@
-header.title=Conferences
+header.title=The book house
+header.store_name=The book house
+header.lyric=A room without books is like a body without a soul.
+header.home=Home
+header.books=Books
+header.login=Login
+header.sign_out=Sign out
+header.registration=Registration
